# KaiLang

./: .gitignore  Cargo.toml  kai_definition.txt
example/basic/: a.out  kai_arithmetic.kai  kai_arithmetic.ll  kai_basic.kai  kai_fn_args.kai  kai_multi_variables.kai  kai_return_cmp.kai  kai_varasgn.kai  kai_varasgn.ll  kai_varasgn_fail_redecl.kai  kai_varasgn_fail_type.kai
example/controlflow/: a.out  kai_branched_var.kai  kai_branched_var_fail.kai  kai_branched_var_nested.kai  kai_if.kai  kai_if_cond_fail.kai  kai_if_nested.kai  kai_return.kai  kai_return_missing.kai  kai_return_missing_nested.kai
example/misc/: a.out  basic.c  basic.ll  branch.c  branch.ll  example.cpp  example.s  kai_fn_args.c  kai_fn_args.ll  kai_return_cmp.c  kai_return_cmp.ll  loop.c  loop.ll  loop.s
kai_ast/: Cargo.toml
kai_ast/src/: ast.rs
kai_common/: Cargo.toml
kai_common/src/: lib.rs  remove_comments.rs  tests.rs
kai_common_types/: Cargo.toml
kai_common_types/src/: ops.rs
kai_ir/: Cargo.toml
kai_ir/src/: cfg.rs  ir.rs  ir_gen.rs  ir_utils.rs  lib.rs  ssa.rs
kai_llvm_gen/: Cargo.toml
kai_llvm_gen/src/: lib.rs
kai_parse/: Cargo.toml
kai_parse/src/: grammar.lalrpop  lib.rs  tests.rs
kai_typecheck/: Cargo.toml
kai_typecheck/src/: lib.rs  tests.rs  typecheck.rs
src/: main.rs  tests.rs
tests/: integration_test.rs
