[package]
name = "kailang"
version = "0.1.0"
authors = ["axlui"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# lalrpop-util = "0.19.0"
# regex = "1"
kai_ast = { path = "kai_ast/" }
kai_parse = { path = "kai_parse/" }
