[package]
name = "kai_parse"
version = "0.1.0"
authors = ["axlui"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The generated code depends on lalrpop-util.
#
# The generated tokenizer depends on the regex crate.
#
# (If you write your own tokenizer, or already have the regex
# crate, you can skip this dependency.)
[dependencies]
kai_ast = { path = "../kai_ast" }
lalrpop-util = "0.19.0"
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
# lalrpop = "0.19.0"
# If you do not supply your own, external lexer you also need the `lexer` feature
lalrpop = { version = "0.19.0", features = ["lexer"] }
