[package]
authors = ["axlui"]
edition = "2018"
name = "kai_typecheck"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.19.0"
kai_ast = {path = "../kai_ast"}
kai_common = {path = "../kai_common"}
kai_ir = {path = "../kai_ir"}
kai_parse = {path = "../kai_parse"}
